[BUGFIX] fix z-index for slider and dropdown

--- a/theme/src/css/main/content-elements/site-header.css
+++ b/theme/src/css/main/content-elements/site-header.css
@@ -308,7 +308,7 @@
 .header.site-header.sticky-header {
   position: sticky; /* stylelint-disable-line */
   top: 0;
-  z-index: 1;
+  z-index: 999;
 }
 
 .big-menu-wrp {
